- All System::mkdir calls were changed to use the new P4A_Mkdir_Recursive() function
- a bunch of unuseful referenced were removed from core helpers
- GetId3 library was updated to 2.0.0b4 (which is php5 only), helper apps for windows servers were removed, they've to be installed in the system path thus we cannot ship them with p4a package 'cause they would be unuseful

2.2.4
- rules to generate P4A_THEME_DIR and P4A_ICONS_DIR were changed
- P4A_IN_DOCUMENT_ROOT was removed because it was never used

2.2.3
- a bug with P4A_Label was fixed ("for" property was erroneous with radio and file P4A_Field)
- ajax file upload was disabled due to a strange bug we hope to solve with future releases of jQuery and its "form" module

2.2.2
- Major bugfix on P4A_DB_Source::saveRow(), the patch from Edr (introduced in 2.2.0) was removed and a few checks were added to prevent inconsistency
- some little bugs on P4A_DB_Source were fixed

2.2.1
- multicheckbox field and multiselect field now support saving in single table field
- P4A_Field::setMultivalueSeparator method was added 
- a bug with images on p4a_table wal solved 
- rich_textarea "Full" theme was added
- jQuery::form was updated to 2.01
- a bug with empty "file" fields submitted with an ajax call was solved

2.2.0
- a bug P4A_DB_Source::saveRow() when multiple primary keys were used was solved (thanks to Edr)

2.1.9
- changed browser detection libray inclusion
- a bug with P4A::close() method was fixed

2.1.8
- P4A_Field::fileDownloadOnClick() now throw an onFileSystemError if file does not exist (Thanks to Matteo for the bug report)
- A bug on P4A_Frame and P4A_fieldset managing objects that were destroyed in the software flow was fixed, now those objects are deanchored too
- P4A_Table_Col now can be disabled so user won't be able to click on the cells of the column (Thanks to Alberto)
- P4A_Widget::composeStringAction() now supports a second parameter "check_enabled_state", default to true
- ADODB was update to 496